--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,46 @@ html {
       background-color: $base-color;
       display: flex;
       align-items: center;
+
+      .word {
+        display: block;
+
+        span {
+          color: $secondary-color;
+          position: relative;
+
+          &::after {
+            content: "";
+            width: 8px;
+            height: 100%;
+            background: $secondary-color;
+            display: block;
+            position: absolute;
+            right: -10px;
+            top: 0;
+            animation: blink 0.5s ease infinite alternate-reverse;
+          }
+        }
+
+        @keyframes blink {
+          from {
+            opacity: 100%;
+          }
+
+          to {
+            opacity: 0%;
+          }
+        }
+      }
+
+      .word.empty {
+        visibility: hidden;
+
+        &::after {
+          visibility: visible;
+          right: 0;
+        }
+      }
     }
   }
 }
