--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&family=Raleway:wght@300;600&display=swap');
 
 $base-color: #6B9B8A;
+$dark-base: #405d53;
+$light-base: #b5cdc5;
 $dark: #1f1f1f;
 
 html {
@@ -11,6 +13,8 @@ html {
   font-family: 'Open Sans', sans-serif;
 
   .App {
+    text-decoration: none;
+
     h1 {
       font-weight: 600;
     }
@@ -45,7 +49,7 @@ html {
         @media  screen and (max-width: 767px) {
           left: 0;
         }
-    
+
         .navbar-nav {
           margin-left: auto;
 
@@ -100,6 +104,27 @@ html {
 
     .Projects {
       background-color: $base-color;
+
+      .ProjectCard {
+        cursor: pointer;
+        border-radius: 5px;
+        transition: 0.3s;
+        box-shadow: 0 4px 6px rgba(0,0,0,.3);
+
+        &:hover {
+          -webkit-transform: scale(1.01);
+          -moz-transform: scale(1.01);
+          transform: scale(1.01);
+          z-index: 10;
+          -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+          -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+        }
+
+        p {
+          font-weight: bold;
+        }
+      }
     }
 
     .Skills {
@@ -118,6 +143,58 @@ html {
         .skill-icon {
           font-size: 3.6em;
           margin-bottom: 10px;
+        }
+      }
+    }
+
+    .Experience {
+      background-color: $base-color;
+
+      .experience-badge {
+        font-size: 11px;
+        background-color: $dark-base;
+        padding: 5px 8px;
+        vertical-align: baseline;
+        font-weight: lighter;
+        font-family: Georgia,Times,"Times New Roman",serif;
+      }
+    }
+
+    .Footer {
+      background-color: $dark;
+      color: white;
+
+      .footer-icon {
+        font-size: 3em;
+      }
+    }
+  }
+
+  .ProjectModal {
+    display: flex!important;
+    justify-content: center;
+    align-items: center;
+
+    .modal-dialog {
+      max-width: 85%;
+      width: 700px;
+  
+      .ProjectModalCard {
+        border-radius: 5px;
+        padding: 25px!important;
+  
+        @media screen and (max-width: 767px) {
+          padding: 15px;
+        }
+  
+        .project-modal-icon {
+          font-size: 2.4em;
+          margin-bottom: 10px;
+        }
+  
+        a {
+          text-decoration: none;
+          color: $base-color;
         }
       }
     }
