--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@ $base-color: #6B9B8A;
 $dark-base: #405d53;
 $light-base: #b5cdc5;
 $dark: #1f1f1f;
+$light: #fafafa;
 
 html {
 	-webkit-font-smoothing: antialiased;
@@ -14,6 +15,7 @@ html {
 
   .App {
     text-decoration: none;
+    background-color: $light;
 
     h1 {
       font-weight: 600;
@@ -110,6 +112,7 @@ html {
         border-radius: 5px;
         transition: 0.3s;
         box-shadow: 0 4px 6px rgba(0,0,0,.3);
+        background-color: $light;
 
         &:hover {
           -webkit-transform: scale(1.01);
@@ -119,6 +122,12 @@ html {
           -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
           -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
           box-shadow: 0 10px 20px rgba(0, 0, 0, .7);
+        }
+
+        img {
+          padding: 10px;
+          border: 4px solid rgba(50,50,50,.1);
+          border-radius: 5px;
         }
 
         p {
@@ -186,6 +195,13 @@ html {
         @media screen and (max-width: 767px) {
           padding: 15px;
         }
+
+        img {
+          max-width: 100%;
+          padding: 10px;
+          border: 4px solid rgba(50,50,50,.1);
+          border-radius: 5px;
+        }
   
         .project-modal-icon {
           font-size: 2.4em;
@@ -195,6 +211,7 @@ html {
         a {
           text-decoration: none;
           color: $base-color;
+          font-weight: 600;
         }
       }
     }
